[feat] finalização quizz
- lógica foi refeita do 0
- tela de resultado sendo exibida dinamicamente

--- a/quiz.html
+++ b/quiz.html
@@ -51,7 +51,7 @@
 
     <main>
 
-        <div>
+        <div id="tituloInicial">
             <h1 class="txt-center">Teste seus conhecimentos sobre concervação correta de alimentos</h1>
         </div>
 
@@ -97,7 +97,7 @@
             <h3 class="txt-center">2. Qual a maneira correta de conservar batatas? </h3>
             <div class="alternativas">
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Guardar na geladeira para manter a umidade.
                 </p>
 
@@ -107,12 +107,12 @@
                 </p> <!-- CORRETA -->
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Congelar logo após a compra.
 
                 </p>
                 <P>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Deixar exposta ao sol para manter firme.
 
                 </P>
@@ -135,17 +135,17 @@
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Armazenar em local seco e quente.
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Cortar em pedaços e deixar em temperatura ambiente.
 
                 </p>
                 <P>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Congelar imediatamente após lavar.
 
                 </P>
@@ -165,7 +165,7 @@
             <div class="alternativas">
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Deixar em temperatura ambiente até consumir.
                 </p>
 
@@ -175,12 +175,12 @@
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Congelar logo após a compra.
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Lavar e secar, deixando em local arejado.
                 </p>
 
@@ -199,17 +199,17 @@
             <div class="alternativas">
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Guardar na geladeira.
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Congelar quando começarem a amadurecer.
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Lavar e deixar na geladeira.
                 </p>
 
@@ -232,12 +232,12 @@
             <div class="alternativas">
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Lavar e guardar na geladeira em recipiente aberto.
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Congelar imediatamente após a compra.
                 </p>
 
@@ -247,7 +247,7 @@
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Deixar em temperatura ambiente até consumir.
                 </p>
             </div>
@@ -270,17 +270,17 @@
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Armazenar na geladeira dentro de um saco plástico fechado.
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Lavar e secar antes de guardar.
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Congelar logo após a compra.
                 </p>
             </div>
@@ -298,17 +298,17 @@
             <div class="alternativas">
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Manter em temperatura ambiente até consumir.
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Congelar logo após a compra.
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Deixar em local arejado fora da geladeira.
                 </p>
 
@@ -331,7 +331,7 @@
             <div class="alternativas">
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Congelar imediatamente após a compra.
                 </p>
 
@@ -341,12 +341,12 @@
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Deixar em local fresco e seco fora da geladeira.
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Lavar e guardar diretamente na geladeira sem secar.
                 </p>
             </div>
@@ -369,17 +369,17 @@
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Deixar em temperatura ambiente.
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Congelar logo após a compra.
                 </p>
 
                 <p>
-                    <input type="radio" name="questao">
+                    <input type="radio" value="0" name="questao">
                     Lavar e guardar sem secar na geladeira.
                 </p>
             </div>
@@ -390,8 +390,14 @@
 
         </div>
 
-        <div id="resultado" class="display_none">
-            TELA DE RESULTADO
+        <div id="resultado" class="display_none txt-center">
+            
+
+            
+
+
+
+
         </div>
 
         <!-- DIV COM O PERCENTUAL, MENSAGEM DINAMICA CONFORME A PORCENTAGEM PELO JS , 
