[refactor] update footer

--- a/feedback.html
+++ b/feedback.html
@@ -139,9 +139,13 @@
 
     <footer class="rodape">
 
+        <div class="link-footer">
+            <p>Inspiração: <a href="https://brasil.un.org/pt-br/sdgs/2" target="_blank">ODS-02</a></p> 
+        </div>
+
         <div>
 
-            <div> <!-- IMAGEM INSTA -->
+            <div>
                 <div>
                     Veja mais sobre
                 </div>
@@ -171,18 +175,6 @@
                         rel="noopener noreferrer">Luciano Rodrigues</a> </li>
             </ul>
         </div>
-
-        <div>
-            <ul>
-                <li class="fonte-bold">CARGOS</li>
-                <li>Desenvolvedor</li>
-                <li>Designer</li>
-                <li>Pesquisador</li>
-                <li>Pesquisador</li>
-                <li>Pesquisador</li>
-            </ul>
-        </div>
-
 
     </footer>
 
