--- a/index.html
+++ b/index.html
@@ -456,6 +456,10 @@
 
     <footer class="rodape">
 
+        <div class="link-footer">
+            <p>Inspiração: <a href="https://brasil.un.org/pt-br/sdgs/2" target="_blank">ODS-02</a></p> 
+        </div>
+
         <div>
 
             <div>
@@ -488,18 +492,6 @@
                         rel="noopener noreferrer">Luciano Rodrigues</a> </li>
             </ul>
         </div>
-
-        <div>
-            <ul>
-                <li class="fonte-bold">CARGOS</li>
-                <li>Desenvolvedor</li>
-                <li>Designer</li>
-                <li>Pesquisador</li>
-                <li>Pesquisador</li>
-                <li>Pesquisador</li>
-            </ul>
-        </div>
-
 
     </footer>
 
