[chore] update icone
- icone na barra de endereço do navegador

--- a/feedback.html
+++ b/feedback.html
@@ -2,10 +2,12 @@
 <html lang="pt-br">
 
 <head>
+    <link rel="shortcut icon" type="imagex/png" href="./assets/img/icone-logo.ico">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback</title>
-
+    
     <link rel="stylesheet" href="./assets/style/header.css">
     <link rel="stylesheet" href="./assets/style/rodape.css">
     <link rel="stylesheet" href="./assets/style/feedback.css">
