--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="pt-br">
 
 <head>
+    <link rel="shortcut icon" type="imagex/png" href="./assets/img/icone-logo.ico">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ECONS</title>
+
     <link rel="stylesheet" href="./assets/style/mainintro.css">
     <link rel="stylesheet" href="./assets/style/pontos-positivos.css">
     <link rel="stylesheet" href="./assets/style/carrossel.css">
