--- a/legumes.html
+++ b/legumes.html
@@ -2,9 +2,12 @@
 <html lang="pt">
 
 <head>
+    <link rel="shortcut icon" type="imagex/png" href="./assets/img/icone-logo.ico">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legumes</title>
+    
     <link href="./assets/style/bootstrap/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style/estilo_catalogo.css">
     <link rel="stylesheet" href="./assets/style/header.css">
