--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./assets/style/sessao-catalogo.css">
     <link rel="stylesheet" href="./assets/style/header.css">
     <link rel="stylesheet" href="./assets/style/rodape.css">
-
+    <link rel="stylesheet" href="./assets/style/footer-responsive-index.css">
 
 </head>
 
