--- a/quiz.html
+++ b/quiz.html
@@ -54,7 +54,7 @@
     <main>
 
         <div id="tituloInicial">
-            <h1 class="txt-center">Teste seus conhecimentos sobre a conaervação correta de alimentos</h1>
+            <h1 class="txt-center">Teste seus conhecimentos sobre a conservação correta de alimentos</h1>
         </div>
 
         <div class="display_block" id="blocoQuestao01">
