[chore] ortografia corrigida

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <div class="intro-info block" id="intro-missao">
             <h1>Nossa Missão</h1>
             <p id="missao">
-                Aqui no ECOnsciente, você encontrará informações e dicas práticas de armazenamento de frutas, legumes e
-                nones, e para testar seus conhecimentos participe dos nossos quizzes e veja o quanto você realmente
+                Aqui no ECONSciente, você encontrará informações e dicas práticas de armazenamento de frutas, legumes e
+                verduras, e para testar seus conhecimentos participe dos nossos quizzes e veja o quanto você realmente
                 sabe. Nosso objetivo é conscientizar e educar a população sobre a importância de reduzir o desperdício
                 de alimentos, acreditamos que pequenas mudanças em nossos hábitos diários podem ter um grande impacto.
             </p>
