--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <link rel="stylesheet" href="./assets/style/mainintro.css">
     <link rel="stylesheet" href="./assets/style/pontos-positivos.css">
     <link rel="stylesheet" href="./assets/style/carrossel.css">
-    <link rel="stylesheet" href="./assets/style/apresentacao.css">
     <link rel="stylesheet" href="./assets/style/sessao-catalogo.css">
     <link rel="stylesheet" href="./assets/style/header.css">
     <link rel="stylesheet" href="./assets/style/rodape.css">
-    <link rel="stylesheet" href="./assets/style/footer-responsive-index.css">
 
 </head>
 
@@ -390,7 +388,7 @@
         <div class="pontos-positivos">
             <div class="box">
                 <div class="box-content">
-                    <img src="./assets/img/index/watermelon-breakfast-svgrepo-com.png" width="200px" alt="" srcset="">
+                    <img src="./assets/img/index/watermelon-breakfast-svgrepo-com.png" alt="" srcset="">
                 </div>
                 <h3>Preservação de nutrientes e sabor</h3>
                 <p>Armazenar e conservar os alimentos de forma adequada evita a perda de nutrientes e mantém o sabor
@@ -398,7 +396,7 @@
             </div>
 
             <div class="box">
-                <div class="box-content"><img src="./assets/img/index/doctor-human-svgrepo-com.png" width="200px" alt=""
+                <div class="box-content"><img src="./assets/img/index/doctor-human-svgrepo-com.png" alt=""
                         srcset=""></div>
                 <h3>Diminuição dos custos de saúde</h3>
                 <p>Uma dieta rica em frutas e verduras pode reduzir gastos com saúde a longo prazo, já que uma
@@ -407,7 +405,7 @@
 
             <div class="box">
                 <div class="box-content ">
-                    <img src="./assets/img/index/basket-picnic-svgrepo-com.png" width="200px" alt="" srcset="">
+                    <img src="./assets/img/index/basket-picnic-svgrepo-com.png" alt="" srcset="">
                 </div>
                 <h3>Prolongamento da vida útil dos alimentos</h3>
                 <p>Com orientações sobre armazenamento correto, o projeto ajuda as pessoas a manterem frutas, legumes e
@@ -415,12 +413,8 @@
                     desnecessário.</p>
             </div>
 
-        </div>
-
-
-        <div class="pontos-positivos">
             <div class="box">
-                <div class="box-content"><img src="./assets/img/index/economy-svgrepo-com.png" width="200px" alt=""
+                <div class="box-content"><img src="./assets/img/index/economy-svgrepo-com.png" alt=""
                         srcset=""></div>
                 <h3>Economia</h3>
                 <p>Ao adotar práticas sustentáveis, as famílias podem economizar em suas compras, aproveitando melhor os
@@ -429,7 +423,7 @@
 
             <div class="box">
                 <div class="box-content ">
-                    <img src="./assets/img/index/chart-column-low-svgrepo-com.png" width="200px" alt="" srcset="">
+                    <img src="./assets/img/index/chart-column-low-svgrepo-com.png" alt="" srcset="">
                 </div>
                 <h3>Redução do impacto ambiental do descarte</h3>
                 <p>Orientações sobre o descarte sustentável ajudam a diminuir a quantidade de lixo orgânico enviada para
@@ -439,7 +433,7 @@
 
             <div class="box">
                 <div class="box-content">
-                    <img src="./assets/img/index/enviroment-green-love-planet-save-world-svgrepo-com.png" width="200px"
+                    <img src="./assets/img/index/enviroment-green-love-planet-save-world-svgrepo-com.png"
                         alt="" srcset="">
                 </div>
                 <h3>Menor emissão de gases do efeito estufa</h3>
@@ -460,7 +454,8 @@
     <footer class="rodape">
 
         <div class="link-footer">
-            <p>Inspiração: <a href="https://brasil.un.org/pt-br/sdgs/12" target="_blank">ODS-12</a></p> 
+            <p>Inspiração:</p>
+            <p><a href="https://brasil.un.org/pt-br/sdgs/12" target="_blank">ODS-12</a></p>
         </div>
 
         <div>
