--- a/feedback.html
+++ b/feedback.html
@@ -161,7 +161,8 @@
     <footer class="rodape">
 
         <div class="link-footer">
-            <p>Inspiração: <a href="https://brasil.un.org/pt-br/sdgs/12" target="_blank">ODS-12</a></p> 
+            <p>Inspiração:</p>
+            <p><a href="https://brasil.un.org/pt-br/sdgs/12" target="_blank">ODS-12</a></p>
         </div>
 
         <div>
