--- a/frutas.html
+++ b/frutas.html
@@ -101,7 +101,7 @@
 
     <section>
 
-        <div class="modal fade modal-xl" id="Modal00" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade " id="Modal00" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
