[chore] meta tags

--- a/frutas.html
+++ b/frutas.html
@@ -3,6 +3,9 @@
 
 <head>
     <link rel="shortcut icon" type="imagex/png" href="./assets/img/icone-logo.ico">
+
+    <meta name="keywords" content="frutas, alimento, desperdício, armazenamento, reutilizar, dicas, boas práticas, abacaxi, ameixa, banana, cereja, damasco, kiwi, laranja, limão, maçã, mamao, manga, melancia, morango, pera, pessego, uva" />
+    <meta name="description" content="O catalogo de frutas serve para exibir todas boas práticas e formas de descartes corretas a respeito de dada fruta. " />
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
