--- a/legumes.html
+++ b/legumes.html
@@ -3,6 +3,9 @@
 
 <head>
     <link rel="shortcut icon" type="imagex/png" href="./assets/img/icone-logo.ico">
+
+    <meta name="keywords" content="legumes, alimento, desperdício, armazenamento, reutilizar, dicas, boas práticas, abóbora, aspargo, batata, Batata-doce, Berinjela, Beterraba, Cebola,Cenoura,Chuchu,Ervilha,Gengibre,Mandioca,Milho,Nabo,Pepino,Rabanete" />
+    <meta name="description" content="O catalogo de legumes serve para exibir todas boas práticas e formas de descartes corretas a respeito de dada legume. " />
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
