--- a/quiz.html
+++ b/quiz.html
@@ -4,6 +4,9 @@
 <head>
     <link rel="shortcut icon" type="imagex/png" href="./assets/img/icone-logo.ico">
 
+    <meta name="keywords" content="Frutas, Legumes, Verduras, alimento, desperdício, interativo, quiz" />
+    <meta name="description" content="Essa página serve para aproximar ainda mais a teoria da prática, resultando em uma absorção de conhecimento mais eficaz." />
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
