--- a/verduras.html
+++ b/verduras.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 
 <head>
     <link rel="shortcut icon" type="imagex/png" href="./assets/img/icone-logo.ico">
+
+    <meta name="keywords" content="Verduras, alimento, desperdício, armazenamento, reutilizar, dicas, boas práticas, acelga, agrião, alface, brócolis, cebolinha, coentro, couve, couve-flor, espinafre, manjericão, mostarda, orégano, repolho, rúcula, salsão, salsinha" />
+    <meta name="description" content="O catalogo de verduras serve para exibir todas boas práticas e formas de descartes corretas a respeito de dada verdura. " />
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
