--- a/artigo.html
+++ b/artigo.html
@@ -4,6 +4,9 @@
 <head>
     <link rel="shortcut icon" type="imagex/png" href="./assets/img/icone-logo.ico" />
 
+    <meta name="keywords" content="Frutas, Legumes, Verduras, alimento, desperdício" />
+    <meta name="description" content="Esta página serve para destacar pesquisas relevantes a respeito da importancia sobre o tema." />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artigos</title>
