--- a/feedback.html
+++ b/feedback.html
@@ -4,6 +4,9 @@
 <head>
     <link rel="shortcut icon" type="imagex/png" href="./assets/img/icone-logo.ico">
     
+    <meta name="keywords" content="Frutas, Legumes, Verduras, alimento, desperdício" />
+    <meta name="description" content="Preencha o nosso formulário para conhecermos melhor você, e não esqueça de deixar o seu comentário." />
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback</title>
