--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <link rel="shortcut icon" type="imagex/png" href="./assets/img/icone-logo.ico">
 
+    <meta name="keywords" content="Frutas, Legumes, Verduras, alimento, desperdício" />
+    <meta name="description" content="O website ECONSiente tem como objetivo conscientizar e educar a população sobre a importância de reduzir o desperdício de alimentos, acreditamos que pequenas mudanças em nossos hábitos diários podem ter um grande impacto." />
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ECONS</title>
