--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
                 sabe. Nosso objetivo é conscientizar e educar a população sobre a importância de reduzir o desperdício
                 de alimentos, acreditamos que pequenas mudanças em nossos hábitos diários podem ter um grande impacto.
             </p>
-            <a href="artigo.html" target="_blank"><button>ARTIGO PRINCIPAL</button></a>
+            <button>
+            <a href="artigo.html" target="_blank">
+                    ARTIGO PRINCIPAL
+                </a>
+                </button>
         </div>
 
         <div class="intro-info none" id="intro-visao">
@@ -148,7 +152,7 @@
         </div>
     </main>
 
-    <h2 class="center">
+    <h2 class="center carrossel-title">
         Veja um pouco sobre <span id="alimentoAtual"></span>
     </h2>
 
